fix: use QListWidget in members panel, fancy scrollbars

--- a/src/components/DMPanel/DMPanel.scss
+++ b/src/components/DMPanel/DMPanel.scss
@@ -14,7 +14,7 @@
   }
 }
 
-#DMPanel, #ChannelsContainer {
+#DMPanel, #ChannelsContainer, #MembersList {
   QScrollBar {
     height: 8px;
     width: 8px;
