--- a/src/components/MembersList/MembersList.scss
+++ b/src/components/MembersList/MembersList.scss
@@ -2,4 +2,9 @@
 
 #MembersList {
   background-color: $background-secondary;
+  &::item, &::item:selected, &::item:hover {
+    background-color: transparent;
+    border: none;
+    padding: 8px;
+  }
 }
